<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<!-- A package.xml in the root of a cmake projects allows it to be built using catkin or colcon (the ROS build system) -->

<package format="2">
  <name>EIPScanner</name>
  <version>1.3.0</version>
  <description>
    Free implementation of EtherNet/IP in C++
  </description>

  <maintainer email="atimin@gmail.com">Aleksey Timin</maintainer>

  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>